# python-template

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
backend/config/: database.py  settings.py
backend/utils/: __init__.py
